--- a/Konferencije/web/WEB-INF/template.xhtml
+++ b/Konferencije/web/WEB-INF/template.xhtml
@@ -23,7 +23,7 @@
             }
 
             .footer{
-                position: absolute;
+                position: fixed;
                 height: 30px;
                
                 margin-top: 50px;
