--- a/Konferencije/web/messages.xhtml
+++ b/Konferencije/web/messages.xhtml
@@ -26,7 +26,7 @@
                         <p:inputTextarea  value="#{user.message_text}" rows="6" cols="50" />
                         <br/>
 
-                        <p:commandButton value="Send" action="#{user.send}" />
+                        <p:commandButton value="Send" action="#{user.send}" ajax="false" />
                     </h:form>
                 </div>
 
